Edit email body

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Pre-Order Form</title>
+    <title>Pre Order Form - Songsinthings</title>
     <link rel="stylesheet" href="./assets/jqaddr/dist/jquery.Thailand.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.17.2/dist/sweetalert2.min.css">
     <style>
@@ -235,7 +235,7 @@
             const filesinput = document.getElementById("imageSlip");
             const csrfinput = document.getElementById("csrf_token");
             const app = document.getElementById("app");
-            const fetchUrl = 'https://script.google.com/macros/s/AKfycbwpaunqAXxqStXSmHxIgl9y5qWQPauu7TRt-6GC5OdSQVnS2_YFTa6Z60c0cMT5G0T1/exec'
+            const fetchUrl = 'https://script.google.com/macros/s/AKfycbwyPKTO8mcqVMTADbbxaaJYfwgqHWJItIQcVMrWRNsQGFJUfFx8nbvCbt0ekljSWus7/exec'
             let slipbase64, slipmimetype;
             let reader = new FileReader();
             app.style.display = "none";
