Update image header index.html

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <div class="loader"></div>
     </div>
     <div id="app" class="max-w-[430px] mx-auto min-h-screen">
-        <div class="flex h-[300px] items-center">
-            <h2 class="text-2xl text-center w-full">Pre Order</h2>
+        <div class="flex min-h-[300px] items-center">
+            <img class="w-full" src="./assets/S__49397764.jpg" />
         </div>
         <form id="orderForm" class="bg-white rounded-3xl p-6 flex flex-col gap-1">
             <label>ชื่อ-นามสกุล<span class="text-red-500">*</span></label>
